# quantization_example

./: .gitignore  README.md  default.nix  pyproject.toml  requirements.txt  shell.nix
broquant/: Model.py  QModel.py  QTensor.py  TolTensor.py  const.py  q_conv2d.py  q_linear.py  q_matmul.py  utils.py
data/: mnist_cnn.pt
docs/: presentation.pptx
nix/: all_builds.nix  sources.json
project/: Model.py  QModel.py  QTensor.py  q_conv2d.py  utils.py
stats/: q_mm_ndebug_opt_7566121492810581480  q_mm_ndebug_unopt_1426991678331902869  q_model_ndebug_unopt_2176809807486412339  q_model_ndebug_unopt_7526615512091266141
stats/opt/: q_model_106122358985994303  q_model_7317439892083257794  q_model_8441082798613813398  q_model_ndebug_opt_3135004857077033060  q_model_ndebug_unopt_6294631741486791753
tests/: test_conv2d.py  test_hardswish.py  test_linear.py  test_mm_perf.py  test_qmodel.py  test_qmodel_perf.py  test_qmodel_prof.py  test_qmodel_time.py  test_quantize.py  test_relu.py  test_sigmoid.py
